@@ -1,7 +1,8 @@
 package com.example.airline.services;
 
-import com.example.airline.DTO.PassengerDTO;
 import com.example.airline.DTO.PassengerProfileDTO;
+import com.example.airline.Mappers.PassengerMapper;
+import com.example.airline.Mappers.PassengerProfileMapper;
 import com.example.airline.Services.PassengerProfileServiceImpl;
 import com.example.airline.entities.PassengerProfile;
 import com.example.airline.repositories.PassengerProfileRepository;
@@ -23,7 +24,12 @@ public class PassengerProfileServiceImplTest {
     @Mock
     PassengerProfileRepository passengerProfileRepository;
     @InjectMocks
-    PassengerProfileServiceImpl passengerProfileServiceImpl;
+    PassengerProfileServiceImpl passengerProfileService;
+    @Mock
+    PassengerProfileMapper passengerProfileMapper;
+
+
+
 
     @Test
     void shouldCreateAndreturnResponseDTO(){
@@ -34,7 +40,19 @@ public class PassengerProfileServiceImplTest {
             return pp;
         });
 
-        var saved = passengerProfileServiceImpl.create(p);
+        when(passengerProfileMapper.toEntity(any())).thenAnswer(inv -> {
+            PassengerProfileDTO.passengerProfileCreateRequest request = inv.getArgument(0);
+            return PassengerProfile.builder().phone(request.phoneNumber()).countryCode(request.countryCode()).build();
+        });
+
+        when(passengerProfileMapper.toDTO(any())).thenAnswer(inv -> {
+            PassengerProfile object = inv.getArgument(0);
+            return new PassengerProfileDTO.passengerProfileResponse(object.getId(), object.getPhone(), object.getCountryCode());
+        });
+
+
+
+        var saved = passengerProfileService.create(p);
         assertThat(saved).isNotNull();
         assertThat(saved.passengerProfileID()).isEqualTo(1L);
         assertThat(saved.phoneNumber()).isEqualTo("222");
@@ -47,8 +65,25 @@ public class PassengerProfileServiceImplTest {
         var p = PassengerProfile.builder().id(1L).phone("222").build();
         when(passengerProfileRepository.findById(1L)).thenReturn(Optional.of(p));
 
+        when(passengerProfileMapper.toDTO(any())).thenAnswer(inv -> {
+            PassengerProfile object = inv.getArgument(0);
+            return new PassengerProfileDTO.passengerProfileResponse(object.getId(), object.getPhone(), object.getCountryCode());
+        });
+
+        doAnswer(inv -> {
+            PassengerProfileDTO.passengerProfileUpdateRequest request = inv.getArgument(0);
+            PassengerProfile object = inv.getArgument(1);
+            if (request.phoneNumber() != null){
+                object.setPhone(request.phoneNumber());
+            }
+            if (request.countryCode() != null){
+                object.setCountryCode(request.countryCode());
+            }
+            return null;
+        }).when(passengerProfileMapper).updateEntity(any(), any());
+
         var passengerProfileUpdate = new PassengerProfileDTO.passengerProfileUpdateRequest("33", "+34");
-        var update = passengerProfileServiceImpl.update(1L, passengerProfileUpdate);
+        var update = passengerProfileService.update(1L, passengerProfileUpdate);
 
         assertThat(update.passengerProfileID()).isEqualTo(1L);
         assertThat(update.phoneNumber()).isEqualTo("33");
@@ -63,9 +98,14 @@ public class PassengerProfileServiceImplTest {
         );
         when(passengerProfileRepository.findAll()).thenReturn(passengerProfiles);
 
-        var saved = passengerProfileServiceImpl.findAll();
+        when(passengerProfileMapper.toDTO(any())).thenAnswer(inv -> {
+            PassengerProfile object = inv.getArgument(0);
+            return new PassengerProfileDTO.passengerProfileResponse(object.getId(), object.getPhone(), object.getCountryCode());
+        });
 
-        assertThat(saved.get(0).passengerProfileID()).isEqualTo(1L);
-        assertThat(saved.get(0).phoneNumber()).isEqualTo("222");
+        var saved = passengerProfileService.findAll();
+
+        assertThat(saved.getFirst().passengerProfileID()).isEqualTo(1L);
+        assertThat(saved.getFirst().phoneNumber()).isEqualTo("222");
     }
 }
